--- a/tastyhub_react/package.json
+++ b/tastyhub_react/package.json
@@ -15,6 +15,7 @@
     "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
